Updated css to revised layout

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,8 +7,8 @@
 
   <div class="centered">
     <h3>
-      Letterspace exhibitions showcase both emerging and
-      established letter-based typo/graphic and illustrative talent.
+      Letterspace exhibitions showcase letters
+      from a host of typo/graphic designers and illustrators.
     </h3>
   </div>
 </div>
@@ -67,7 +67,7 @@
 
     <div id="instagram" class="grid_12">
 
-      <!-- LightWidget WIDGET --><script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/54d6607747df5372b488090339cf5aa0.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+      <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/54d6607747df5372b488090339cf5aa0.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
     </div>
   </div>
 </div>
