--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -28,16 +28,17 @@ img { max-width: 100%; }
 .border { background-image: url(bg.png); background-repeat: repeat-x; background-size: auto 30px; }
 .highlight { color: $fifth-color; }
 .white { color: $primary-color; }
+.center { text-align: center; }
 
 /* Page Styles */
 /* 16px browser default */
-h1 { font-size: 28px; /* 28px */ }
-h2 { font-size: 30px; /* 30px */ letter-spacing: 5px; }
-h3 { font-size: 28px; /* 28px */ line-height: 1.7; }
-h4 { font-size: 16px; /* 16px */ }
+h1 { font-size: 75px; /* 28px */ letter-spacing: 5px; }
+h2 { font-size: 1.875em; /* 30px */ letter-spacing: 5px; }
+h3 { font-size: 1.75em; /* 28px */ line-height: 1.7; }
+h4 { font-size: 1em; /* 16px */ }
 h5 { font-size: 0.75em; /* 12px */ }
 h6 { font-size: 0.625em; /* 10px */ }
-p { font-size: 1em; /* 16px */  padding-bottom: 1.25em; /*20px */  }
+p { font-size: 1em; /* 16px */  padding-bottom: 1.25em; /* 20px */  }
 li { font-size: 1em;}
 
 strong { font-weight: bold; }
@@ -81,7 +82,7 @@ input[type="email"], input[type="url"], input[type="search"], input[type="tel"],
 .grid_10,
 .grid_11,
 .grid_12 {
-		margin: 0 2% 0% 0%; /* 0 20px 0px 0; */
+		margin: 0 2% 0% 0%; /* 0 20px 0px 0px; */
 		float: left;
 		display: block;
 }
@@ -93,41 +94,45 @@ input[type="email"], input[type="url"], input[type="search"], input[type="tel"],
 /* MAIN BUILD */
 
 /* Header */
-#header { height: 100vh; }
-.mainlogo { width: 12.5%; margin: 0 auto; padding: 9% 0%; }
-.logobg { background-color: $fourth-color; height: 60vh; }
-.strap { background-color: $primary-color; text-align: center; padding: 10%; height: 40vh; }
+#header { margin-top: 5%; }
+.mainlogo { margin: 0 auto; padding: 10% 0%; color: $primary-color; }
+.logobg { background-color: $fourth-color; }
+.strap { background-color: $primary-color; text-align: center; padding: 10%; }
 
 /* Navigation */
 
 
 
 /* Footer */
-#footer { background-color: $fourth-color; color: $primary-color; margin-bottom: 0; padding: 80px 0;
+#footer { background-color: $fourth-color; color: $primary-color; margin-bottom: 0; padding: 8% 0%; /* 80px 0px */
 	.centered { text-align: left; }
+	ul { padding-left: 25%; }
 	li { display: inline-block; width: 10%; padding-right: 5%; }
 	li:last-child { margin-right: 0; }
-	p, li { padding-bottom: 0; margin-bottom: 0; font-size: 28px; }
+	p, li { padding-bottom: 0; margin-bottom: 0; font-size: 1.75em; /* 28px */ }
 }
 
 /* Content */
 #content { text-align: center; }
-.border { margin: 110px 0px;
-	h2 { background-color: $primary-color; width: 22%; margin: 0 auto; }
+.border {
+	h2 { background-color: $primary-color; margin: 0 auto; display: inline-block; padding: 0% 2.5%; }
 }
-#show { padding-bottom: 110px;
-	.border { padding-top: 0; margin-top: 2.5%; }
-}
-#atoz, #newsletter { background-color: $fifth-color; padding: 40px 0px;
-	h2, h3 { margin-bottom: 20px; }
-}
-.fill { padding: 15px 0px; }
-#shop, #social { padding-bottom: 110px; }
-.follow { padding: 110px 0px 55px 0px; }
+#atoz, #newsletter { background-color: $fifth-color; }
+.fill { padding: 1.5% 0px; } /* 15px 0px */
+.follow { padding: 11% 0% 5.5% 0%; } /* 110px 0px 55px 0px */
+#instagram { padding-bottom: 6.5% ; /* 65px */ }
 #instagram .grid_4 { background-color: $secondary-color; padding: 15% 0%; }
-
-
-
+#show, #read, #shop, #social { padding-top: 10%;
+	h3 { padding-top: 8%; }
+}
+#shop { padding-bottom: 10%; }
+#show { padding-bottom: 5%; }
+#newsletter { padding: 5% 0%; }
+#atoz { padding: 5% 0% 6% 0%;
+	h2 { font-size: 75px; letter-spacing: normal; }
+	h3 { padding-bottom: 1.8%; /* 18px */ }
+	p { line-height: 2; padding-bottom: 0; }
+}
 
 
 
