--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,16 +20,12 @@
         <div class="logobg">
           <div class="centered">
             <div class="mainlogo">
-              <%= image_tag('logo_white.png') %>
+              <h1>Letterspace;</h1>
             </div>
           </div>
         </div>
-        <div class="strap">
-          <div class="centered">
-            <h1>Letterspace: Celebrating letterform in everyday spaces</h1>
-          </div>
-        </div>
-      </div>
+
+
 
       <div id="content">
 
