--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <div class="logobg">
           <div class="centered">
             <div class="mainlogo">
-              <h1>Letterspace;</h1>
+              <h1>Letterspace</h1>
             </div>
           </div>
         </div>
@@ -38,15 +38,15 @@
       <div id="footer" class="grid_12">
         <div class="centered">
           <div class="grid_6 alpha">
-            <p>
+            <p class="hello">
               hello@letterspace.co.uk
             </p>
           </div>
           <div class="grid_6 omega">
               <ul>
-                <li><%= image_tag('instagram.png') %></li>
-                <li><%= image_tag('twitter.png') %></li>
-                <li><%= image_tag('facebook.png') %></li>
+                <li class="social_btn"><%= image_tag('instagram.png') %></li>
+                <li class="social_btn"><%= image_tag('twitter.png') %></li>
+                <li class="social_btn"><%= image_tag('facebook.png') %></li>
                 <li>helloletterspace</li>
               </ul>
           </div>
