--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,8 +42,8 @@
   </div>
   <div class="centered">
     <h3>
-      Letterspace brings you letter-adorned goods of the finest quality.<br />
-      Our shop will open here in October 2017.
+      Letterspace sell letter-adorned goods of the finest quality.<br/>
+      Our doors will open October 2017.
     </h3>
   </div>
 </div>
@@ -51,7 +51,7 @@
 <div id="newsletter" class="grid_12">
   <div class="centered">
     <h2>SIGN UP FOR OUR NEWSLETTER</h2>
-    <input></input>
+    <%= render 'subscribers/new' %>
   </div>
 </div>
 
