Updated copy with revised dates and removed fb button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,8 +46,8 @@
               <ul>
                 <li class="social_btn"><%= image_tag('instagram.png') %></li>
                 <li class="social_btn"><%= image_tag('twitter.png') %></li>
-                <li class="social_btn"><%= image_tag('facebook.png') %></li>
-                <li>helloletterspace</li>
+                <!-- <li class="social_btn"><%= image_tag('facebook.png') %></li> -->
+                <li>letterspace_</li>
               </ul>
           </div>
         </div>
