--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
 <div id="atoz" class="grid_12">
   <div class="centered">
     <h2>A to Z</h2>
-    <h3>Manchester, October 2017</h3>
+    <h3>Manchester, 2017/18</h3>
     <p>
       A to Z will mark the launch of Letterspace. Further details will be announced soon.<br />
       Keep an eye on our Twitter feed or sign-up for our newsletter below.
@@ -31,7 +31,7 @@
   <div class="centered">
     <h3>
       Letterspace self-publish books that celebrate letterform.<br />
-      Our first book will be published in October 2017.
+      Our first book will be published in 2018.
     </h3>
   </div>
 </div>
@@ -43,7 +43,7 @@
   <div class="centered">
     <h3>
       Letterspace sell letter-adorned goods of the finest quality.<br/>
-      Our doors will open October 2017.
+      Our doors will open in 2018.
     </h3>
   </div>
 </div>
