--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,11 @@
         <div class="logobg">
           <div class="centered">
             <div class="mainlogo">
-              <h1><%= link_to "Letterspace", root_path %></h1>
+              <h1><%= link_to image_tag('letterspace.png'), root_path %></h1>
             </div>
           </div>
         </div>
+      </div>
 
 
 
@@ -36,21 +37,34 @@
       </div>
 
       <div id="footer" class="grid_12">
-        <div class="centered">
-          <div class="grid_6 alpha">
-            <p class="hello">
-              hello@letterspace.co.uk
-            </p>
+
+        <div class="grid_12">
+
+          <div class="centered">
+
+            <div class="grid_6 alpha">
+              <p class="hello">
+                hello@letterspace.co.uk
+              </p>
+            </div>
+
+            <div class="grid_6 omega">
+                <ul>
+                  <li class="social_btn"><%= image_tag('instagram.png') %></li>
+                  <li class="social_btn"><%= image_tag('twitter.png') %></li>
+                  <!-- <li class="social_btn"><%= image_tag('facebook.png') %></li> -->
+                  <li>letterspace_</li>
+                </ul>
+            </div>
+
           </div>
-          <div class="grid_6 omega">
-              <ul>
-                <li class="social_btn"><%= image_tag('instagram.png') %></li>
-                <li class="social_btn"><%= image_tag('twitter.png') %></li>
-                <!-- <li class="social_btn"><%= image_tag('facebook.png') %></li> -->
-                <li>letterspace_</li>
-              </ul>
-          </div>
+
         </div>
+
+        <div id="copyright" class="grid_12">
+
+        </div>
+
       </div>
 
     </div>
