--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,56 +1,39 @@
 
-<div id="show" class="grid_12">
 
-  <div class="border">
-    <h2>SHOW</h2>
-  </div>
 
+
+
+
+
+<div id="blurb" class="grid_12 border">
+  
   <div class="centered">
-    <h3>
-      Letterspace exhibitions showcase letters
-      from a host of typo/graphic designers and illustrators.
-    </h3>
-  </div>
-</div>
-
-<div id="atoz" class="grid_12">
-  <div class="centered">
-    <h2>A to Z</h2>
-    <h3>Manchester, 2017/18</h3>
     <p>
-      A to Z will mark the launch of Letterspace. Further details will be announced soon.<br />
-      Keep an eye on our Twitter feed or sign-up for our newsletter below.
+      The Letterspace project is a celebration of letterform in everyday spaces founded by designer and educator, Lucy Biggs. 26 designers are currently working to create the inaugural Letterspace alphabet spanning spaces across the UK, America, Canada, Europe and the Middle East. The alphabet will be launched at The Whitworth, Manchester, in April 2018.
     </p>
-  </div>
-</div>
 
-<div id="read" class="grid_12">
-  <div class="border">
-    <h2>READ</h2>
-  </div>
-  <div class="centered">
-    <h3>
-      Letterspace self-publish books that celebrate letterform.<br />
-      Our first book will be published in 2018.
-    </h3>
-  </div>
-</div>
+    <p>
+      Each letter will be screen printed in a limited edition of 26 by print maker, Dan Mather, in London, with each designer selecting a bespoke ink and paper.
+    </p>
 
-<div id="shop" class="grid_12">
-  <div class="border">
-    <h2>SHOP</h2>
-  </div>
-  <div class="centered">
-    <h3>
-      Letterspace sell letter-adorned goods of the finest quality.<br/>
-      Our doors will open in 2018.
-    </h3>
+    <p>
+      A full set of the 26 letters will be auctioned at The Whitworth, with all proceeds donated to Mustard Tree and Printed by Us.
+    </p>
+
+    <p>
+      The posters will also be available to buy at The Whitworth and online from April 2018.
+    </p>
+
+    <p>
+      The Letterspace project is kindly and generously supported by Slater Harrison and Manchester School of Art.
+    </p>
+
   </div>
 </div>
 
 <div id="newsletter" class="grid_12">
   <div class="centered">
-    <h2>SIGN UP FOR OUR NEWSLETTER</h2>
+    <h2>SIGN UP FOR NEWS</h2>
     <%= render 'subscribers/new' %>
   </div>
 </div>
@@ -59,15 +42,12 @@
   <div class="border fill">
   </div>
   <div class="centered">
-    <h3>
-      Letterspace was founded in 2017<br />
-      by typographer, designer and educator, Lucy Biggs.
-    </h3>
-    <h3 class="follow">Follow helloletterspace on Instagram!</h3>
+    <h3 class="follow">Follow us @letterspace_</h3>
 
     <div id="instagram" class="grid_12">
-
+      <!--
       <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/54d6607747df5372b488090339cf5aa0.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
+      -->
     </div>
   </div>
 </div>
