--- a/app/views/subscribers/_new.html.erb
+++ b/app/views/subscribers/_new.html.erb
@@ -4,7 +4,7 @@
   <%= simple_form_for @subscriber do |f| %>
 
     <div class="subscribe_input">
-      <%= f.input :email, placeholder: "Email address", label: false %>
+      <%= f.input :email, placeholder: "Enter your email address here", label: false %>
     </div>
 
     <div class="subscribe_btn">
