--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -8,9 +8,45 @@
 
 
 /* Font Imports */
+@font-face {
+ font-family: 'effra_md';
+ font-weight: normal;
+ font-style: normal;
+ src: asset-url('Effra_W_Md.eot');
+ src: asset-url('Effra_W_Md.eot?#iefix') format('embedded-opentype'),
+			asset-url('Effra_W_Md.woff') format('woff'),
+			asset-url('Effra_W_Md.ttf') format('truetype');
+}
 
-@import url('https://fonts.googleapis.com/css?family=EB+Garamond');
-@font-face {font-family: 'FuturaBT-Medium';src: asset-url('32BBFD_0_0.eot');src: asset-url('32BBFD_0_0.eot?#iefix') format('embedded-opentype'),asset-url('32BBFD_0_0.woff2') format('woff2'),asset-url('32BBFD_0_0.woff') format('woff'),asset-url('32BBFD_0_0.ttf') format('truetype');}
+@font-face {
+ font-family: 'effra_rg';
+ font-weight: normal;
+ font-style: normal;
+ src: asset-url('Effra_W_Rg.eot');
+ src: asset-url('Effra_W_Rg.eot?#iefix') format('embedded-opentype'),
+			asset-url('Effra_W_Rg.woff') format('woff'),
+			asset-url('Effra_W_Rg.ttf') format('truetype');
+}
+
+@font-face {
+ font-family: 'effra_lt';
+ font-weight: normal;
+ font-style: normal;
+ src: asset-url('Effra_W_Lt.eot');
+ src: asset-url('Effra_W_Lt.eot?#iefix') format('embedded-opentype'),
+			asset-url('Effra_W_Lt.woff') format('woff'),
+			asset-url('Effra_W_Lt.ttf') format('truetype');
+}
+
+@font-face {
+ font-family: 'effra_bd';
+ font-weight: normal;
+ font-style: normal;
+ src: asset-url('Effra_W_Bd.eot');
+ src: asset-url('Effra_W_Bd.eot?#iefix') format('embedded-opentype'),
+			asset-url('Effra_W_Bd.woff') format('woff'),
+			asset-url('Effra_W_Bd.ttf') format('truetype');
+}
 
 /* Global Variables */
 
@@ -23,13 +59,15 @@ $sixth-color: #a7e9f7; /* baby blue */
 $seventh-color: #a1e3af; /* green */
 $eighth-color: #a7a7a8; /* dark gray */
 
-$primary-font: 'FuturaBT-Medium', serif;
-$secondary-font: 'EB Garamond', serif;
+$font-light: 'effra_lt';
+$font-regular: 'effra_rg';
+$font-medium: 'effra_md';
+$font-bold: 'effra_bd';
 
 
 /* Core */
 * { margin: 0; }
-body,html { height: 100%; line-height: 1.3; font-family: $secondary-font; color: $fourth-color; font-weight: normal; font-style: normal; letter-spacing: 2px; }
+body,html { height: 100%; line-height: 1.3; color: $fourth-color; letter-spacing: 2px; font-family: $font-regular; }
 img { max-width: 100%; }
 .centered { margin: 0 auto; width: 90%; max-width: 1000px; text-align: left;  }
 .clear { display: block; line-height: 0; font-size: 0; margin: 0; padding: 0; height: 0; overflow: hidden; clear: both; }
@@ -48,7 +86,7 @@ h3 { font-size: 1.75em; /* 28px */ line-height: 1.7; }
 h4 { font-size: 1em; /* 16px */ }
 h5 { font-size: 0.75em; /* 12px */ }
 h6 { font-size: 0.625em; /* 10px */ }
-p { font-size: 1em; /* 16px */  padding-bottom: 1.25em; /* 20px */  }
+p { font-size: 1em; /* 16px */  padding-bottom: 1.25em; /* 20px */ }
 li { font-size: 1em;}
 
 strong { font-weight: bold; }
@@ -110,7 +148,7 @@ input[type="email"], input[type="url"], input[type="search"], input[type="tel"],
 .strap { background-color: $primary-color; text-align: center; padding: 10%; }
 
 /* Navigation */
-nav { font-family: $primary-font; font-size: 1.875em; /* 30px */ letter-spacing: 5px; padding: 5% 0%; }
+nav { font-size: 1.875em; /* 30px */ letter-spacing: 5px; padding: 5% 0%; }
 nav li { display: inline-block; }
 
 
@@ -145,7 +183,7 @@ nav li { display: inline-block; }
 #blurb { padding-bottom: 10%;
 	p { font-size: 1.75em; /* 28px */ line-height: 1.7; }
 }
-#social, #newsletter, #footer { font-family: $primary-font; }
+
 .border { background-size: auto 10px; }
 .subscribe_box { padding-top: 5%; }
 #subscriber_email { width: 80%; display: inline-block; float: left; font-size: 1.5em; }
@@ -156,7 +194,7 @@ nav li { display: inline-block; }
 
 #thanks { padding: 10% 0%; }
 
-#featured { font-family: $primary-font;
+#featured {
 	h2 { font-size: 150px; }
 }
 
