--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,23 +23,27 @@
 
   <div class="centered">
     <p>
-      The Letterspace project is a celebration of letterform in everyday spaces founded by designer and educator, Lucy Biggs. 26 designers are currently working to create the inaugural Letterspace alphabet spanning spaces across the UK, America, Canada, Europe and the Middle East. The alphabet will be launched at The Whitworth, Manchester, in April 2018.
+      Letterspace is simply a celebration of letterform in everyday spaces, founded by designer and educator, Lucy Biggs.
     </p>
 
     <p>
-      Each letter will be screen printed in a limited edition of 26 by print maker, Dan Mather, in London, with each designer selecting a bespoke ink and paper.
+      26 designers are currently working to create the inaugural Letterspace alphabet spanning spaces across the UK, America, Canada, Europe and the Middle East. The alphabet will be first presented both in Manchester city centre and at The Whitworth in April 2018.
     </p>
 
     <p>
-      A full set of the 26 letters will be auctioned at The Whitworth, with all proceeds donated to Mustard Tree and Printed by Us.
+      The alphabet will form the basis of educational workshops with schools throughout the North West of England with the aim of inspiring the next generation to study art and design at a higher level.
     </p>
 
     <p>
-      The posters will also be available to buy at The Whitworth and online from April 2018.
+      Each of the 26 letters will be screen printed as a signed, limited edition of 26 by print maker, Dan Mather, in London, with each designer selecting a bespoke ink and paper. This has been made possible by the kind and generous support of Slater Harrison.
     </p>
 
     <p>
-      The Letterspace project is kindly and generously supported by Slater Harrison and Manchester School of Art.
+      In addition, a full set of the 26 letters will be auctioned at The Whitworth in April 2018, with all proceeds donated to two charities; Mustard Tree in Manchester and Printed by Us in Sheffield. Remaining posters will also be available to buy at The Whitworth event and online from April 2018.
+    </p>
+
+    <p>
+      Letterspace has also been kindly supported by Dalton Maag who have gifted the use of their typeface, Effra, used for the Letterspace logo.
     </p>
 
   </div>
@@ -59,9 +63,9 @@
     <h3 class="follow">Follow us @letterspace_</h3>
 
     <div id="instagram" class="grid_12">
-      <!--
+
       <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/54d6607747df5372b488090339cf5aa0.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
-      -->
+      
     </div>
   </div>
 </div>
