Added the homepage rollover

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,11 @@
         </div>
       </div>
 
-      <nav class="grid_12 border">
+      <nav class="grid_12">
+
+        <div class="border">
+        </div>
+        
         <div class="centered">
           <ul>
             <li>ABOUT</li>
@@ -49,7 +53,10 @@
 
       <div id="footer" class="grid_12">
 
-        <div id="sponsors" class="grid_12 border">
+        <div id="sponsors" class="grid_12">
+
+          <div class="border">
+          </div>
 
           <div class="centered">
             <h4>Kindly supported by</h4>
