--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -71,7 +71,7 @@ body,html { height: 100%; line-height: 1.3; color: $fourth-color; letter-spacing
 img { max-width: 100%; }
 .centered { margin: 0 auto; width: 90%; max-width: 1000px; text-align: left;  }
 .clear { display: block; line-height: 0; font-size: 0; margin: 0; padding: 0; height: 0; overflow: hidden; clear: both; }
-.border { background-image: url(bg.png); background-repeat: repeat-x; background-size: auto 20px; }
+.border { background-image: url(bg.png); background-repeat: repeat-x; background-size: auto 20px; padding: 1.5% 0; }
 .highlight { color: $fifth-color; }
 .white { color: $primary-color; }
 .center { text-align: center; }
@@ -151,7 +151,7 @@ input[type="email"], input[type="url"], input[type="search"], input[type="tel"],
 
 /* Navigation */
 nav { font-size: 1.875em; /* 30px */ letter-spacing: 5px; padding: 5% 0%; }
-nav ul { padding-left: 2.5%; }
+nav ul { padding: 2.5% 0% 0% 2.5% ; }
 nav li { display: inline-block; }
 
 
@@ -165,7 +165,7 @@ nav li { display: inline-block; }
 	p, li { padding-bottom: 0; margin-bottom: 0; font-size: 1.75em; /* 28px */ }
 }
 #sponsors { background-color: $primary-color;
-	h4 { color: $eighth-color; margin-top: 7.5%; }
+	h4 { color: $eighth-color; margin-top: 2.5%; }
 	ul { padding: 5% 0%; }
 	li { width: 15%; display: inline-block; margin-right: 5%; }
 }
@@ -175,15 +175,13 @@ nav li { display: inline-block; }
 .border {
 	h2 { background-color: $primary-color; margin: 0 auto; display: inline-block; padding: 0% 5%; font-size: 2.1875em; /* 35px */ margin: -5%; padding-top: 4.3%; }
 }
-#newsletter { background-color: $secondary-color; padding: 5% 0%; }
-.fill { padding: 1.5% 0px; } /* 15px 0px */
+#newsletter { background-color: $secondary-color; padding: 5% 0%; margin: 5% 0; }
 .follow { padding: 11% 0% 5.5% 0%; } /* 110px 0px 55px 0px */
 #instagram { padding-bottom: 6.5% ; /* 65px */ }
 #instagram .grid_4 { background-color: $secondary-color; padding: 15% 0%; }
-#show, #blurb, #social { padding-top: 10%;
-	h3 { padding-top: 8%; }
-}
-#blurb { padding-bottom: 10%;
+#show { padding-top: 10%; }
+#social{ padding: 2.5% 0%; }
+#blurb { padding: 10% 0%;
 	p { font-size: 1.75em; /* 28px */ line-height: 1.7; }
 }
 
@@ -198,12 +196,38 @@ nav li { display: inline-block; }
 
 #thanks { padding: 10% 0%; }
 
-#featured {
+#featured { margin-bottom: 10%;
 	h2 { font-size: 150px; }
 }
 
 .product_box { width: 27.5%; display: inline-block; margin: 0% 2.5%; margin-bottom: 5%; background-color: gray; border: solid 15px $fourth-color; text-align: center; padding: 7.5% 0%; }
 #newsletter h2, nav li, #header h1 { font-family: $font-bold; }
+
+#outer-box { position: relative;  }
+
+#outer-box:hover #inner-box {
+  opacity: .9;
+  transition: opacity .5s;
+}
+
+#outer-box #inner-box {
+  background: $secondary-color;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  position: absolute;
+  transition: opacity .5s;
+}
+
+#outer-box #inner-box h4 {
+	font-family: $font-regular;
+  text-align: center;
+	font-size: 2.0em;
+}
+
+.designer_name { padding-top: 27.5%; }
 
 /* Media Queries / Break Points */
 
