--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,8 +5,15 @@
     <div id="featured_box">
       <% @products.each do |product| %>
 
-        <div class="product_box">
+        <div id="outer-box" class="product_box" onclick="">
           <h2><%= product.title %></h2>
+          <div id="inner-box">
+            <h4 class="designer_name"><%= raw product.designer_name.gsub(" ", "<br>") %></h4>
+            <div class="dash">
+              -
+            </div>
+            <h4><%= product.designer_name %></h4>
+          </div>
         </div>
 
       <% end %>
@@ -15,11 +22,12 @@
 </div>
 
 
+<div class="border grid_12">
+</div>
 
 
 
-
-<div id="blurb" class="grid_12 border">
+<div id="blurb" class="grid_12">
 
   <div class="centered">
     <p>
@@ -49,6 +57,9 @@
   </div>
 </div>
 
+<div class="border grid_12">
+</div>
+
 <div id="newsletter" class="grid_12">
   <div class="centered">
     <h2>SIGN UP FOR NEWS</h2>
@@ -57,7 +68,7 @@
 </div>
 
 <div id="social" class="grid_12">
-  <div class="border fill">
+  <div class="border">
   </div>
   <div class="centered">
     <h3 class="follow">Follow us @letterspace_</h3>
@@ -65,7 +76,7 @@
     <div id="instagram" class="grid_12">
 
       <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/54d6607747df5372b488090339cf5aa0.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 100%; border: 0; overflow: hidden;"></iframe>
-      
+
     </div>
   </div>
 </div>
