--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,10 +30,10 @@
 
         <div class="border">
         </div>
-        
+
         <div class="centered">
           <ul>
-            <li>ABOUT</li>
+            <li><a href="#blurb">ABOUT</a></li>
             <li><%= link_to "LETTERS", root_path %></li>
             <li><%= link_to "SHOP", products_path %></li>
             <li>CONTACT</li>
@@ -98,4 +98,33 @@
     </div>
 
   </body>
+
+  <script>
+    $(document).ready(function(){
+    // Add smooth scrolling to all links
+    $("a").on('click', function(event) {
+
+    // Make sure this.hash has a value before overriding default behavior
+    if (this.hash !== "") {
+      // Prevent default anchor click behavior
+      event.preventDefault();
+
+      // Store hash
+      var hash = this.hash;
+
+      // Using jQuery's animate() method to add smooth page scroll
+      // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
+      $('html, body').animate({
+        scrollTop: $(hash).offset().top
+      }, 800, function(){
+
+        // Add hash (#) to URL when done scrolling (default click behavior)
+        window.location.hash = hash;
+      });
+    } // End if
+    });
+    });
+  </script>
+
+
 </html>
