--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,1 +1,28 @@
-<h2>Product Page</h2>
+
+<div id="show_page" class="centered">
+
+  <div id="show_image_box" class="grid_12">
+
+    <div class="product_box show_box" style="background-color:<%= @product.product_background %>">
+      <h2><%= @product.title %></h2>
+    </div>
+
+    <p>
+      * artwork available 2018
+    </p>
+
+  </div>
+
+  <div id="author_info_box" class="grid_12">
+    <h2>ABOUT THIS LETTER</h2>
+
+    <div id="show_description">
+      <%= @product.description %>
+    </div>
+  </div>
+
+
+
+
+
+</div>
