tweaked the view styles

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -17,7 +17,13 @@
     <h2>ABOUT THIS LETTER</h2>
 
     <div id="show_description">
-      <%= @product.description %>
+      <p>
+        <%= @product.description %>
+      </p>
+    </div>
+
+    <div id="show_button" class="button">
+      AVAILABLE TO BUY APRIL 2018
     </div>
   </div>
 
