--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -71,7 +71,7 @@ body,html { height: 100%; line-height: 1.3; color: $fourth-color; letter-spacing
 img { max-width: 100%; }
 .centered { margin: 0 auto; width: 90%; max-width: 1000px; text-align: left;  }
 .clear { display: block; line-height: 0; font-size: 0; margin: 0; padding: 0; height: 0; overflow: hidden; clear: both; }
-.border { background-image: url(bg.png); background-repeat: repeat-x; background-size: auto 20px; padding: 1.5% 0; }
+.border { background-image: url(bg.png); background-repeat: repeat-x; background-size: auto 15px; padding: 1.5% 0; }
 .highlight { color: $fifth-color; }
 .white { color: $primary-color; }
 .center { text-align: center; }
@@ -185,7 +185,6 @@ nav li a { color: $fourth-color; }
 	p { font-size: 1.75em; /* 28px */ line-height: 1.7; }
 }
 
-.border { background-size: auto 10px; }
 .subscribe_box { padding-top: 5%; }
 #subscriber_email { width: 80%; display: inline-block; float: left; font-size: 1.5em; }
 .subscribe_btn input { display: inline-block; float: left; width: 15%; font-size: 1.5em; font-weight: bold; letter-spacing: 2px; background-color: $fourth-color;	}
@@ -246,6 +245,7 @@ nav li a { color: $fourth-color; }
 	h2, p { font-family: $font-medium; }
 }
 #show_description { padding-top: 2.5%; }
+#show_button { font-family: $font-medium; background-color: $fifth-color; color: $fourth-color; }
 #contact_page { padding: 0% 0% 20% 3%;
 	li { font-size: 1.75em; /* 28px */ line-height: 1.7; }
 }
